2012-04-17  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* kvu_threads.cpp (kvu_pthread_cond_timeout): Added.
	* library interface version to 9:0:6

2009-10-17  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* library interface version 9:0:5 frozen (2.7.0 release)

2009-04-12  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* kvu_message_queue.h: file added.

2009-03-27  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* kvu_timestamp.h: New interface.

2009-03-21  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* kvu_dbc.h: Added DBC_NEVER_REACHED macro.
	* kvu_debug.h: File added.
	* library version changed to 9:0:5

2006-12-06  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* library interface version 8 frozen (2.4.5 release)
	* library version changed to 8:0:4
	* kvu_utils.cpp (kvu_string_strip_outer_quotes): Added.
	
2005-03-12  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

        * library interface version 7 frozen (2.4.0 release)

2004-12-15  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* kvu_utils.cpp (kvu_string_regex_meta_escape): Added.
	* kvu_utils.cpp (kvu_string_search_and_replace): Added.

2004-12-14  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* kvu_value_queue.h (VALUE_QUEUE_RT_C): Added.

2004-12-12  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* kvu_utils.h (kvu_vector_search_and_replace): Added.
	* kvu_utils.h (kvu_string_shell_meta_escape): Added.
	* library version changed to 7:0:3
	
2003-08-29  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

        * library interface version 6 frozen

2003-05-29  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* kvu_rtcaps.h (kvu_set_thread_scheduling): added
	* library version changed to 6:0:2
	
2003-02-13  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* kvu_inttypes.h: file added
	* library version changed to 5:0:1

2003-01-07  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* library interface version 4 frozen

2002-11-05  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* kvu_locks.h: removed dependency to asm/atomic.h
	* kvu_locks.h (add,sub,increment,decrement): removed
	