@@ -40,8 +40,8 @@ LIBECASOUND_VERSION=24
 LIBECASOUND_VERSION_AGE=0
 LIBECASOUNDC_VERSION=2
 LIBECASOUNDC_VERSION_AGE=1
-LIBKVUTILS_VERSION=9
-LIBKVUTILS_VERSION_AGE=6
+LIBKVUTILS_VERSION=10
+LIBKVUTILS_VERSION_AGE=0
 
 AC_SUBST(LIBECASOUND_VERSION)
 AC_SUBST(LIBECASOUND_VERSION_AGE)
