@@ -1,7 +1,13 @@
+2012-04-28  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
+
+	* kvu_procedure_timer.h: Public API modified to use
+	struct timespec (instead of struct timeval).
+	* library interface version to 10:0:0
+
 2012-04-17  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
 
 	* kvu_threads.cpp (kvu_pthread_cond_timeout): Added.
-	* library interface version to 9:0:6
+	* library interface version to 10:0:6
 
 2009-10-17  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
 
